src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__sparse.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "first-name": "Francis"
    }
  }
]
