src/tests/select/snapshots/ciboulette2postgres__tests__select__query_params__sparse_others.snap
---
source: src/tests/select/query_params.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "How to dead"
    },
    "related": {
      "type": "peoples",
      "id": "[uuid]",
      "meta": null
    }
  },
  {
    "id": "[uuid]",
    "type": "articles",
    "data": {
      "title": "Oh my g**"
    },
    "related": {
      "type": "peoples",
      "id": "[uuid]",
      "meta": null
    }
  },
  {
    "id": "[uuid]",
    "type": "peoples",
    "data": {
      "age": 22,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "related": null
  }
]
